# ai-text-to-server

./: README.md
iptl-text-to-server/: pyproject.toml  server.py  tool.py
iptl-text-to-server/mcp_server/: mcp_server.py
iptl-text-to-server/mcp_tools/: tools_text2sql.py  tools_type.py
iptl-text-to-server/resources/config/: config.py  config_save.py
iptl-text-to-server/resources/evaluate/: eval.py  eval_dataset.json
iptl-text-to-server/resources/text2sql/: __init__.py  config.py  db_manager.py  engine.py  engine_manager.py  factory.py  prompts.py  retriever_manager.py  schema_manager.py  service.py  sql_validator.py  test_mysql.py
iptl-text-to-server/resources/text2sql/chroma_db/vectors/2ef4c7eb0e3faef319953478c4b6180e/: chroma.sqlite3  text2sql_schemas.json
iptl-text-to-server/resources/text2sql/chroma_db/vectors/9bb32ec8610bfb74aa45317ee44bc33f/: db_table_names.json  text2sql_schemas.json
iptl-text-to-server/resources/text2sql/prompts/: text_to_sql.md
iptl-text-to-server/resources/text2sql/prompts/dialects/: mysql.md  postgresql.md
iptl-text-to-server/tools/: sql_executor.py  sql_vaildator.py  text_to_sql.py
iptl-text-to-server/tools/evaluate/: eval.py  eval_dataset.json
iptl-text-to-server/tools/text2sql/: config.py  db_manager.py  engine.py  factory.py  prompts.py  retriever_manager.py  schema_manager.py
iptl-text-to-server/tools/text2sql/chroma_db/: db_table_names.json  text2sql_schemas.json
iptl-text-to-server/tools/text2sql/chroma_db/vectors/278f70cc6f01225f45a4fac90878531a/: chroma.sqlite3  db_table_names.json  text2sql_schemas.json
iptl-text-to-server/tools/text2sql/chroma_db/vectors/2ef4c7eb0e3faef319953478c4b6180e/: chroma.sqlite3  db_table_names.json  text2sql_schemas.json
iptl-text-to-server/tools/text2sql/chroma_db/vectors/9bb32ec8610bfb74aa45317ee44bc33f/: db_table_names.json  text2sql_schemas.json
iptl-text-to-server/tools/text2sql/dialects/: __init__.py  knowledge.py  postgresql.py
