[project]
name = "iptl-mcp-server"
version = "12.0.0.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi== 0.121.0",
    "mcp==1.23.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pyproj==3.7.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "uvicorn==0.37.0",
    "polib==1.2.0",
    "llama-index>=0.14.12",
    "llama-index-llms-openai-like>=0.5.3",
    "chromadb>=1.4.1",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-embeddings-openai-like>=0.2.2",
    "psycopg2>=2.9.11",
    "sqlglot>=28.6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=1.0.0",
    "teamcity-messages",
]
# 代码混淆
confusion = [
    "pyarmor==9.1.8",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --color=yes --cov=. --cov-report=html:reports/html --cov-report=xml:reports/coverage.xml"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.sonar]
projectName = "AgentX-iPortal-MCP-Server"
projectKey = "AgentX-iPortal-MCP-Server"
projectVersion = "12.0.0.0"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
